svgio/inc/SvgNumber.hxx
@@ -37,8 +37,8 @@ class InfoProvider
 public:
     virtual ~InfoProvider() {}
     virtual basegfx::B2DRange getCurrentViewPort() const = 0;
-    /// return font size of node inherited from parents
-    virtual double getCurrentFontSizeInherited() const = 0;
+    /// return font size of node, either set here or inherited from parents
+    virtual double getCurrentFontSize() const = 0;
     /// return xheight of node inherited from parents
     virtual double getCurrentXHeightInherited() const = 0;
 };
