svgio/inc/svgnode.hxx
@@ -164,10 +164,9 @@ namespace svgio::svgreader
 
             /// InfoProvider support for %, em and ex values
             virtual basegfx::B2DRange getCurrentViewPort() const override;
-            virtual double getCurrentFontSizeInherited() const override;
+            virtual double getCurrentFontSize() const override;
             virtual double getCurrentXHeightInherited() const override;
 
-            double getCurrentFontSize() const;
             double getCurrentXHeight() const;
 
             /// Id access
