svgio/source/svgreader/svgtspannode.cxx
@@ -65,11 +65,6 @@ namespace svgio::svgreader
             }
         }
 
-        double SvgTspanNode::getCurrentFontSize() const
-        {
-            return getCurrentFontSizeInherited();
-        }
-
 } // end of namespace svgio::svgreader
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
