svgio/qa/cppunit/SvgNumberTest.cxx
@@ -38,7 +38,7 @@ public:
         return basegfx::B2DRange(0.0, 0.0, 0.0, 0.0);
     }
 
-    double getCurrentFontSizeInherited() const override { return 12.0; }
+    double getCurrentFontSize() const override { return 12.0; }
 
     double getCurrentXHeightInherited() const override { return 5.0; }
 };
